--- a/index1.html
+++ b/index1.html
@@ -259,9 +259,9 @@
 					
 			 <link rel="apple-touch-icon" href="static/picture/001.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <script src="https://ios33.github.io/dh1/static/js/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://ios33.github.io/dh1/3u/static/css/jabi.css">
-    <link rel="stylesheet" type="text/css" href="https://ios33.github.io/dh1/3u/static/css/style.css">
+    <script src="https://ios33.github.io/dh/static/js/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://ios33.github.io/dh/3u/static/css/jabi.css">
+    <link rel="stylesheet" type="text/css" href="https://ios33.github.io/dh/3u/static/css/style.css">
     <title>艾峰软件源/游戏源-专注于砸壳/破解</title>
     <style type="text/css">
         body {
